# markup-pdf-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md
examples/: recipe.rs  resume.rs  simple.rs
examples/assets/fonts/: install.sh
examples/assets/xml/: recipe.xml  resume.xml  simple.xml
src/: assets.rs  border.rs  document.rs  dom.rs  error.rs  hex_color.rs  image.rs  layer.rs  layout.rs  lib.rs  page.rs  rect.rs  style.rs  text.rs
