[package]
name = "markup_pdf_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = { version = "0.5.3", features = ["embedded_images"] }
nom = "7"
taffy = "0.2.1"
rusttype = "0.9.2"
image = "0.24.5"
thiserror = "1.0"
